[project]
name = "mazegen"
version = "0.1.0"
description = "The best maze in the world"
authors = [
    {name = "aanouer, achouf"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
include = ["mazegen"]